@@ -28,6 +28,7 @@ Fixes:
     * Clamp image tween to never underflow also.
     * [entry] display preedit string even though there is no attribute
     * Fix shutdown of Edje_Multisense.
+    * Reduce potential reentrant issue when using edje_object_signal_emit.
 
 Edje 1.2.0
 
